# VOCALOID-Search-Desktop

./: .gitignore  AGENTS.md  CLAUDE.md  README.ja.md  README.md  README.zh.md  package-lock.json
.github/workflows/: build.yml
docs/plans/: 2026-03-08-ui-layout-adjustment-design.md  2026-03-08-ui-layout-adjustment.md
docs/superpowers/plans/: 2026-03-20-player-shell-metadata-regain-and-pip-compact.md
docs/superpowers/specs/: 2026-03-20-player-shell-metadata-stability-design.md
openspec/specs/auto-skip/: spec.md
openspec/specs/pip-window/: spec.md
openspec/specs/playback-browsing-boundary/: spec.md
openspec/specs/playback-reset-notification/: spec.md
openspec/specs/playback-session-boundary/: spec.md
openspec/specs/searchview-state-restoration/: spec.md
openspec/specs/unified-player-component/: spec.md
openspec/specs/video-playback/: spec.md
vocaloid-search-desktop/: .gitignore  AGENTS.md  README.ja.md  README.md  README.zh-TW.md  index.html  package-lock.json  package.json  pip.html  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
vocaloid-search-desktop/src/: App.vue  PipApp.vue  i18n.ts  main.ts  pip-main.ts  pip-style.css  style.css
vocaloid-search-desktop/src-tauri/: Cargo.toml  tauri.conf.json
vocaloid-search-desktop/src-tauri/capabilities/: default.json
vocaloid-search-desktop/src-tauri/icons/: icon.icns
vocaloid-search-desktop/src-tauri/src/: commands.rs  database.rs  lib.rs  main.rs  models.rs  playback_settings_config.rs  scraper.rs  scraper_preflight.rs  state.rs
(+93 files in other folders)
