[package]
name = "vocaloid-search-desktop"
version = "0.1.0"
description = "A desktop application for searching VOCALOID videos on Niconico"
authors = ["you"]
edition = "2021"

[lib]
name = "vocaloid_search_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "vocaloid-search-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
async-channel = "2"
parking_lot = "0.12"
dirs = "6"
quick-xml = "0.37"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
